--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
   <body>
     <div class="location">
       <h1 class="location-timezone">Timezone</h1>
-      <p>Icon</p>
+      <canvas class="icon" width="128" height="128"></canvas>
     </div>
     <div class="temperature">
-      <h2 class="temperature-degree">34</h2>
+      <div class="degree-section">
+        <h2 class="temperature-degree">34</h2>
+        <span>F</span>
+      </div>
       <div class="temperature-description">It is friggin cold</div>
     </div>
 
+    <script src="skycons.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
